# debugging-and-issue-resolution

./: .env.example  .flake8  compose.yml  instruction.md  prometheus.yml  pyproject.toml  requirements.txt  task.toml
.github/workflows/: ci.yml
app/: app.py  config.py  logger.py  metrics.py  tracer.py
app/utils/: correlation.py
environment/: Dockerfile
solution/: app.py  logger.py  metrics.py  solve.sh  tracer.py
solution/routes/: health.py
tests/: conftest.py  test.sh  test_logs.py  test_metrics.py  test_outputs.py  test_tracing.py
