[project]
name = "flask-observability"
version = "0.1.0"
description = "Flask microservice with logs, metrics and traces"
requires-python = ">=3.11"

dependencies = [
  "Flask==3.1.2",
  "prometheus-client==0.24.0",
  "python-json-logger==4.0.0",

  "opentelemetry-api==1.39.1",
  "opentelemetry-sdk==1.39.1",
  "opentelemetry-exporter-otlp==1.39.1",

  "opentelemetry-instrumentation-flask==0.60b1",
  "deprecated==1.2.14"
]


[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "black==25.12.0",
  "flake8==7.3.0"
]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
